# calendar-ble-server

./: Cargo.toml
google-auth/: auth_setup.py
src/: bt.rs  calendar.rs  main.rs
