[package]
name = "calendar-ble-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
futures = "0.3.31"
thiserror = "2.0.17"
